# CryptoTools

./: .gitignore  CMakeLists.txt  CryptoTools.sln
CryptoTools/: CMakeLists.txt  CryptoTools.vcxproj  CryptoTools.vcxproj.filters  apireq.cpp  apireq.h  cconnect.cpp  cconnect.h  main.cpp  utils.cpp  utils.h
main/: CMakeLists.txt
tech_analysis/: CMakeLists.txt  accumulators.hpp  candle_math.hpp  math.hpp
test/: CMakeLists.txt
test/test_tech_analysis/: CMakeLists.txt  base_tests.cpp
test/test_whale/: CMakeLists.txt  api_interface_test.cpp  base_tests.cpp  poloniex_api_test.cpp  whale_api_test.cpp
whale_api/: CMakeLists.txt  api_interface.cpp  api_interface.h  net_utils.hpp  poloniex_api.hpp  whale_api.hpp
